# parakeet-cli

./: Cargo.toml  Makefile  README.md  todo.txt
.github/workflows/: ci.yml
parquet-lens-common/: Cargo.toml
parquet-lens-common/src/: config.rs  lib.rs
parquet-lens-core/: Cargo.toml
parquet-lens-core/src/: baseline.rs  compare.rs  engine.rs  export.rs  filter.rs  gcs_reader.rs  lib.rs  nested.rs  null_patterns.rs  parallel_reader.rs  quality.rs  reader.rs  recommendations.rs  repair.rs  s3_reader.rs  sample.rs  scanner.rs  schema.rs  schema_diff.rs  stats.rs  stats_ext.rs  timeseries.rs
parquet-lens-core/src/profile/: boolean.rs  cardinality.rs  frequency.rs  full_scan.rs  histogram.rs  mod.rs  numeric.rs  string_profiler.rs  temporal.rs
parquet-lens-core/tests/: integration_test.rs
parquet-lens-tui/: Cargo.toml
parquet-lens-tui/src/: main.rs
parquet-lens-tui/src/tui/: app.rs  events.rs  mod.rs  session.rs  theme.rs  ui.rs
