[workspace]
members = ["parquet-lens-common", "parquet-lens-core", "parquet-lens-tui"]
resolver = "2"

[workspace.dependencies]
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["async"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
