[workspace]
members = ["parquet-lens-common", "parquet-lens-core", "parquet-lens-tui"]
resolver = "2"

[workspace.dependencies]
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["async"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
memmap2 = "0.9"
bytes = "1"
glob = "0.3"
rayon = "1"
hyperloglog = "1.0.3"
tdigest = "0.2.3"
regex = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bloomfilter = "1"
