[package]
name = "parquet-lens-core"
version = "0.1.0"
edition = "2021"

[dependencies]
parquet-lens-common = { path = "../parquet-lens-common" }
arrow = { workspace = true }
parquet = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
memmap2 = { workspace = true }
bytes = { workspace = true }
glob = { workspace = true }
rayon = { workspace = true }
hyperloglog = { workspace = true }
tdigest = { workspace = true }
regex = { workspace = true }
xxhash-rust = { workspace = true }
bloomfilter = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
